# pesterexample

./: .gitignore  .pre-commit-config.yaml  README.md  ReleaseNotes.md  install.ps1  pyproject.toml  testResults.xml
.github/ISSUE_TEMPLATE/: bugfix.md  enhancement.md  hotfix.md  release.md
.github/workflows/: 00-deployment-pipeline.yaml  01-pre-commit-and-document-check.yaml  03-ci.yaml  04-build-and-deploy-to-production.yaml
src/: AnotherModule.psd1  AnotherModule.psm1  AnotherScript.ps1  AnotherTest.txt  GetEmoji.ps1  MyModule.psd1  MyModule.psm1  MyScript.ps1
tests/: DotSourcing.Tests.ps1  Get-Emoji.Tests.ps1  Get-Planet.Tests.ps1  GetEmoji.Tests.ps1  Mocking.Tests.ps1  MyScript.Tests.ps1  TemporaryDirectory.Tests.ps1  TempraryDirectory.Tests.ps1
